# ChangeLog for app-misc/lhinv
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-misc/lhinv/Attic/ChangeLog,v 1.11 2004/07/11 18:23:15 slarti Exp $

*lhinv-1.1-r4 (11 Jul 2004)

  11 Jul 2004; Tom Martin <slarti@gentoo.org>
  +files/lhinv-1.1-r4-vmnet_sit.patch, lhinv-1.1-r4.ebuild:
  Added a sit/vmnet interface type patch. Thanks to Tyler Montbriand
  <tsm@accesscomm.ca> in bug 54344.

  10 Jul 2004; Tom Martin <slarti@gentoo.org> lhinv-1.1-r3.ebuild:
  Added ~amd64.

  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
  -lhinv-1.1-r1.ebuild, lhinv-1.1-r2.ebuild, lhinv-1.1-r3.ebuild:
  QA IUSE fixes. 1.1-r3 -x86 stable

  25 Apr 2004; David Holm <dholm@gentoo.org> lhinv-1.1-r3.ebuild:
  Added to ~ppc.

*lhinv-1.1-r3 (23 Apr 2004)

  23 Apr 2004; Stuart Herbert <stuart@gentoo.org> lhinv-1.1-r3.ebuild:
  The cgi executable now installs into /var/www/localhost/cgi-bin; see
  bug #44667

  14 Mar 2004; Michael Sterrett <mr_bones_@gentoo.org> lhinv-1.1-r1.ebuild,
  lhinv-1.1-r2.ebuild:
  Don't assign default to S; header fix

*lhinv-1.1-r2 (30 Aug 2002)

  19 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> lhinv-1.1-r2.ebuild :
  Updated to mirror://sourceforge in SRC_URI.

  30 Aug 2002; Seemant Kulleen <seemant@gentoo.org> lhinv-1.1-r2.ebuild
  files/digest-lhinv-1.1-r2 :

  Pointed to /home/httpd (as set by the apache build) instead of
  /usr/local/httpd.  Thanks to vapier@netzero.com (SpanKY) in bug #5359.

*lhinv-1.1-r1 (1 Feb 2002)

  19 Oct 2002; Daniel Ahlberg <aliz@gentoo.org> lhinv-1.1-r1.ebuild :
  Updated to mirror://sourceforge in SRC_URI.

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> ChangeLog :
  
  Added initial ChangeLog which should be updated whenever the package is
  updated in any way. This changelog is targetted to users. This means that the
  comments should well explained and written in clean English. The details about