@@ -1,6 +1,6 @@
 # Copyright 1999-2004 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/lhinv/Attic/lhinv-1.1-r4.ebuild,v 1.1 2004/07/11 18:23:15 slarti Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/lhinv/Attic/lhinv-1.1-r4.ebuild,v 1.2 2004/07/13 08:51:10 slarti Exp $
 
 inherit eutils
 
@@ -17,8 +17,9 @@ DEPEND=">=sys-apps/sed-4"
 RDEPEND="dev-lang/perl"
 
 src_unpack() {
-	unpack ${A} && cd ${S} || die
-	epatch ${FILESDIR}/lhinv-1.1-r4-vmnet_sit.patch || die "epatch failed."
+	unpack ${A}
+	cd ${S}
+	epatch ${FILESDIR}/${PN}-1.1-r4-vmnet_sit.patch || die "epatch failed."
 }
 
 src_compile() {
