@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/lhinv
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/lhinv/Attic/ChangeLog,v 1.11 2004/07/11 18:23:15 slarti Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-misc/lhinv/Attic/ChangeLog,v 1.12 2004/07/13 08:51:10 slarti Exp $
+
+  13 Jul 2004; Tom Martin <slarti@gentoo.org> lhinv-1.1-r4.ebuild:
+  QA fix in src_unpack. Changed cd ${S} && unpack ${A} || die to what it
+  should be. Changed epatch to use ${PN}.
 
 *lhinv-1.1-r4 (11 Jul 2004)
 
